kubernetes/apps/opengym/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: opengym
  namespace: opengym
spec:
  selector:
    app: opengym
  ports:
    - { name: http, port: 80, targetPort: http }
