kubernetes/apps/opengym/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opengym
  namespace: opengym
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 48m
spec:
  ingressClassName: nginx
  tls:
    - hosts: [opengym.lab.skyhaven.ltd]
      secretName: opengym-tls
  rules:
    - host: opengym.lab.skyhaven.ltd
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: opengym
                port:
                  name: http
